--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,27 @@
     "files.associations": {
         "kernel.h": "c",
         "memory.h": "c",
-        "idt.h": "c"
+        "idt.h": "c",
+        "kheap.h": "c",
+        "heap.h": "c",
+        "config.h": "c",
+        "charconv": "c",
+        "array": "c",
+        "chrono": "c",
+        "deque": "c",
+        "forward_list": "c",
+        "list": "c",
+        "string": "c",
+        "unordered_map": "c",
+        "unordered_set": "c",
+        "vector": "c",
+        "string_view": "c",
+        "format": "c",
+        "initializer_list": "c",
+        "span": "c",
+        "text_encoding": "c",
+        "io.h": "c",
+        "stdint.h": "c",
+        "random": "c"
     }
 }
