implement ext2 or whatever it is

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,8 @@
         "status.h": "c",
         "stddef.h": "c",
         "typeinfo": "c",
-        "streamer.h": "c"
+        "streamer.h": "c",
+        "ext2.h": "c",
+        "variant": "c"
     }
 }
